--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.19",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
