--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "@mui/system": "^5.0.3",
     "@reduxjs/toolkit": "^1.6.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
