--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mui/material": "^5.0.3",
     "@mui/system": "^5.0.3",
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.17.4",
     "react-redux": "^7.2.5"
